--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ cffi==1.14.0
 constantly==15.1.0
 cryptography==2.9
 cssselect==1.1.0
+dnspython==1.16.0
+ez-setup==0.9
 hyperlink==19.0.0
 idna==2.9
 incremental==17.5.0
